--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@react-native-community/checkbox": "^0.5.17",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
+    "axios": "^1.7.3",
     "expo": "~51.0.24",
+    "expo-checkbox": "~3.0.0",
     "expo-status-bar": "~1.12.1",
+    "qs": "^6.13.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-axios": "^0.17.1",
     "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "expo-checkbox": "~3.0.0"
+    "react-native-screens": "3.31.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
